--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -17,6 +17,7 @@
         "react"
     ],
     "rules": {
-        "linebreak-style": ["error", "windows"]
+        "linebreak-style": ["error", "windows"],
+        "no-console": "off"
     }
 }
